--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react-native-webview-invoke": "^0.3.1"
   },
   "devDependencies": {
-    "typescript": "^2.1.5",
-    "@types/es6-promise": "0.0.32"
+    "typescript": "^2.1.5"
   }
 }
