--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-native-webview-invoke for react-native-webview-bridge",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && babel browser.js --out-file browser.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,8 +32,6 @@
     "react-native-webview-invoke": "^0.3.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-env": "^1.1.8",
     "typescript": "^2.1.5"
   }
 }
