--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es5",
         "module": "commonjs",
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "preserveConstEnums": true,
         "declaration": true,
-        "jsx": "react"
+        "jsx": "react",
+        "lib": [
+            "es5",
+            "es2015.promise",
+            "dom"
+        ]
     },
     "exclude": [
         "node_modules",
